axum-egui-macro/tests/ui/trailing_slash.stderr
error: API path must not end with '/' (trailing slash)
 --> tests/ui/trailing_slash.rs:5:1
  |
5 | #[server("/api/trailing/")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `server` (in Nightly builds, run with -Z macro-backtrace for more info)
